More fixes (#312)
- [x] Fix table header vertical padding in size 2, table header cell
button alignment
- [x] Fix separator in dropdown and selects cause horizontal scroll on
Safari
- [x] Fix: set Progress default size to 6

--- a/packages/frosted-ui/src/components/base-menu/base-menu.css
+++ b/packages/frosted-ui/src/components/base-menu/base-menu.css
@@ -15,7 +15,8 @@
   flex: 1 1 0%;
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   padding: var(--base-menu-content-padding);
 
   :where(.fui-BaseMenuContent:has(.fui-ScrollAreaScrollbar[data-orientation='vertical'])) & {
